web-client/src/styles/custom.scss
/* ... */
.pdf-preview-controls {
  [data-icon='caret-left'],
  [data-icon='caret-right'] {
    position: relative;
    top: 5px;
  }

  svg:hover {
    color: color($theme-color-primary-dark);
  }

  .pages {
    display: inline-block;
    width: 126px;
    margin-right: 10px;
    margin-left: 10px;
    font-weight: $font-semibold;
    text-align: center;
  }
}

button.usa-button.pdf-preview-btn {
  overflow: hidden;
  max-width: inherit;
  line-height: 1.4rem;
  text-align: left;
  word-break: break-all;
}

button.change-scanner-button {
  color: white;
  font-weight: $font-semibold;

  &:hover {
    color: $color-primary-alt;
  }
}

.scanner-area-header {
  padding: 10px;
  background-color: color($theme-color-primary-darker);
  color: white;

  a,
  button {
    color: $color-white;
  }

  a:not(.usa-button):hover,
  button:hover {
    color: $color-primary-alt;
  }

  .set-right {
    padding: 0;
    margin-top: 5px;
    float: right;
  }
}

.document-select-container {
  min-height: 425px;
  padding: 20px;
  border: 1px solid color($theme-color-base-lighter);
  border-top: 0px;
  background-color: $color-primary-alt-lightest;

  .ustc-ui-tabs.container-tabs.document-select li.active {
    border-bottom: 1px solid $color-primary-alt-lightest;
  }
}

.batch-index {
  margin-left: 2px;
}

.bg-white {
  background-color: white;

  &:hover {
    background-color: white;
  }
}

.preview-container {
  padding: 20px;
  padding-top: 0px;
  border: 1px solid color($theme-color-base-lighter);
  border-top: 0px;
  background-color: white;

  .preview-container--image-area {
    background-color: color($theme-color-base);

    img {
      display: block;
      width: 50%;
      padding-top: 10px;
      padding-bottom: 10px;
      margin: 0 auto;
    }
  }
}

.header-scanned-batches {
  font-family: $font-source-sans;
  font-size: 17px;
  font-weight: $font-semibold;
}

.working-copy-filters {
  .working-copy-filters--header {
    span {
      font-weight: $font-semibold;
    }
  }

  .working-copy-filters--content {
    padding: 1em;
    border: 1px solid color($theme-color-base-lightest);
    background-color: $color-primary-alt-lightest;

    .show-all-sessions {
      border-right: 1px solid color($theme-color-base-light);

      label {
        font-weight: $font-semibold;
      }
    }
  }
}

.header-with-blue-background {
  padding: 0.75em 1.25em;
  background-color: color($theme-color-primary-dark);
  color: $color-white;

  h3 {
    margin-bottom: 0;
  }
  button {
    color: $color-white;
  }
  a:not(.usa-button):hover,
  button:hover {
    color: $color-primary-alt;
  }
}

.represented-text {
  color: $color-primary-alt;
}

.minw-30 {
  min-width: 15rem;
}

.advanced-search {
  /* big screens */
  @media only screen and (min-width: $medium-screen) {
    .right-gray-border {
      border-right: 1px solid color($theme-color-base-light);
    }

    .advanced-search__form-container {
      height: 375px;
    }
  }
  /* little screens */
  @media only screen and (max-width: $medium-screen - 1) {
    input#petitioner-name,
    select {
      margin-bottom: 20px;
    }
  }

  .advanced-search__button {
    margin-top: 39px;
    margin-bottom: 20px;
  }
}

.hide-radio {
  cursor: default;
  pointer-events: none;
  &:before {
    opacity: 0;
  }
}

.usa-tag.red-tag {
  padding-top: 2px;
  padding-bottom: 2px;
  background: color($theme-color-secondary-dark);
  color: white;
  font-size: 14px;
}

.docket-entry-preview-text {
  overflow: hidden;
  width: 600px;
  max-height: 41px;
  margin: 0.5rem 0;

  &.edit-docket--visible-overflow {
    overflow: visible;
  }
}

#service-parties {
  font-size: 17px;
}

.desktop\:upload-court-document-description-container {
  @media only screen and (min-width: $medium-screen) {
    min-height: 471px;
  }
}

.accordion-item-title {
  align-self: center;
}

.document-viewer--documents {
  height: 1000px;

  iframe {
    border: none;
  }
}

.document-viewer--documents-list-container {
  height: auto;

  .document-viewer--documents-list {
    height: 1000px;
    overflow-y: scroll;
  }
}

.message-detail .usa-accordion__heading .accordion-item-title {
  font-size: 16px;
  font-weight: $font-regular;
}

.sealed-in-blackstone {
  color: color($theme-color-secondary-dark);
}

.attachment-information {
  margin-right: 20px;
  float: right;
}

.archived-document-frame {
  width: 100%;
  height: 945px;
  padding: 20px;
  border: 1px solid color($theme-color-base-lighter);
}

.sealed-address {
  color: color($theme-color-secondary-dark);
}

.sealed-contact-icon {
  position: absolute;
  margin-left: -20px;
}

.position-relative {
  position: relative;
}

.health-check-text {
  font-size: 17px;
  font-weight: 600;
}

.card {
  hr {
    width: 90%;
    margin-left: 15px;
  }
}

.margin-top-negative {
  margin-top: -10px;
}

.font-sans-pro {
  font-family: $font-source-sans;
  font-size: 17px;
}

#react-deployed-date {
  text-align: right;
}
/* ... */

